styles/style.css
/* ... */
.wp-intro__animation--second, .wp-intro__animation--fourth {
  top: 25vh;
}

.wp-intro__animation {
  -webkit-animation-delay: .5s;
          animation-delay: .5s;
  -webkit-animation-duration: 3s;
          animation-duration: 3s;
  -webkit-animation-name: text-fade;
          animation-name: text-fade;
  -webkit-animation-direction: alternate;
          animation-direction: alternate;
}

.wp-intro__animation--second {
  -webkit-animation-delay: 3.6s;
          animation-delay: 3.6s;
}

.wp-intro__animation--third {
  -webkit-animation-delay: 6.4s;
          animation-delay: 6.4s;
}

.wp-intro__animation--fourth {
  -webkit-animation-delay: 9.6s;
          animation-delay: 9.6s;
  -webkit-animation-duration: 3s;
          animation-duration: 3s;
  -webkit-animation-name: text-fade--end;
          animation-name: text-fade--end;
  -webkit-animation-fill-mode: forwards;
          animation-fill-mode: forwards;
}

@-webkit-keyframes text-fade {
  0% {
    opacity: 0;
  }
  30% {
    opacity: 1;
  }
  85% {
    opacity: 1;
  }
  100% {
    opacity: 0;
  }
}

@keyframes text-fade {
  0% {
    opacity: 0;
  }
  30% {
    opacity: 1;
  }
  85% {
    opacity: 1;
  }
  100% {
    opacity: 0;
  }
}

@-webkit-keyframes text-fade--end {
  0% {
    opacity: 0;
  }
  30% {
    opacity: 1;
  }
  100% {
    opacity: 1;
  }
}

@keyframes text-fade--end {
  0% {
    opacity: 0;
  }
  30% {
    opacity: 1;
  }
  100% {
    opacity: 1;
  }
}

.wp-intro--show {
  opacity: 1;
  display: block;
}

.stop-scrolling {
  height: 100vh;
  overflow-y: hidden;
}

.wp-intro--fade {
  -webkit-transition: opacity 0.7s;
  transition: opacity 0.7s;
}

.wp-intro__skip {
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  -webkit-box-pack: end;
      -ms-flex-pack: end;
          justify-content: flex-end;
  -webkit-box-align: end;
      -ms-flex-align: end;
          align-items: flex-end;
  padding: 0 9vw 9vw 0;
}

@media only screen and (min-width: 1100px) {
  .wp-intro__skip {
    padding: 0 9vw 12.5vh 0;
  }
}

.wp-intro a, .wp-intro p {
  z-index: 2;
}

.wp-intro__progress {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  width: 80px;
}

.wp-intro__progress__bar {
  position: relative;
  top: 15px;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 10;
      -ms-flex: 10;
          flex: 10;
  -ms-flex-preferred-size: 0;
      flex-basis: 0;
  height: 1px;
  margin: 0 5px 10px;
}

.wp-intro__progress__line {
  width: 0;
  -webkit-transition: width 11s linear;
  transition: width 11s linear;
  background: #E52025;
}

.wp-intro__slide--first {
  opacity: 0;
  -webkit-animation-delay: .6s;
          animation-delay: .6s;
  -webkit-animation-duration: 3s;
          animation-duration: 3s;
  -webkit-animation-name: text-fade;
          animation-name: text-fade;
  -webkit-animation-direction: alternate;
          animation-direction: alternate;
  -webkit-animation-iteration-count: 4;
          animation-iteration-count: 4;
}

.services {
  margin: 3.4vh;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
}

@media only screen and (min-width: 1100px) {
  .services {
    height: 90vh;
    margin: 6vh;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: horizontal;
    -webkit-box-direction: normal;
        -ms-flex-direction: row;
            flex-direction: row;
  }
}

.services__item {
  position: relative;
  width: 100%;
  height: 15vh;
  margin-top: 1.7vh;
  -webkit-transition: all ease-in-out 0.2s;
  transition: all ease-in-out 0.2s;
  overflow: hidden;
}

@media only screen and (min-width: 1100px) {
  .services__item {
    width: 100vw;
    height: 100%;
    margin-top: 0;
  }
  .services__item + .services__item {
    margin-left: 6vh;
  }
}

.services__item:hover .services__img {
  -webkit-transform: scale(1.05);
          transform: scale(1.05);
  opacity: 1;
}

.services__img {
  opacity: 1;
  z-index: 1;
  -webkit-transition: ease-in-out 0.25s;
  transition: ease-in-out 0.25s;
}

@media only screen and (min-width: 1100px) {
  .services__img {
    opacity: 0.9;
  }
}

.services-title {
  position: absolute;
  bottom: 0;
  left: 0;
  z-index: 5;
}

.contact-container {
  margin-top: 10.2vh;
}

@media only screen and (min-width: 1100px) {
  .contact-container {
    margin-top: 12vh;
  }
}

.contact-map {
  margin: 3.4vh;
}

@media only screen and (min-width: 1100px) {
  .contact-map {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    margin: 6vh;
  }
}

.contact-map__item {
  width: 100%;
}

.contact-map__item + .contact-map__item {
  margin-top: 3.4vh;
}

@media only screen and (min-width: 1100px) {
  .contact-map__item + .contact-map__item {
    margin-top: 0;
  }
}

@media only screen and (min-width: 1100px) {
  .contact-map__address {
    padding-left: 5rem;
  }
}

.contact-map__google {
  position: relative;
  display: block;
  width: 100%;
  height: 20vh;
}

@media only screen and (min-width: 1100px) {
  .contact-map__google {
    min-height: 50vh;
  }
}

.contact-map__google:hover {
  cursor: pointer;
}
/*# sourceMappingURL=style.css.map */

